@@ -5,4 +5,21 @@ Todo
 Changes
 Build.PL
 lib/Net/Cisco/ACS.pm
+lib/Net/Cisco/ACS/Device.pm
+lib/Net/Cisco/ACS/DeviceGroup.pm
+lib/Net/Cisco/ACS/User.pm
+scripts/m1.pl
+scripts/m2.pl
+scripts/m3.pl
+scripts/m4.pl
+scripts/m5.pl
+scripts/m6.pl
+scripts/m7.pl
+scripts/m8.pl
+scripts/m9.pl
+scripts/m10.pl
+scripts/m11.pl
+scripts/m12.pl
+scripts/m13.pl
+scripts/m14.pl
 t/001_load.t
