@@ -1,5 +1,8 @@
 TODO list for Perl module Net::Cisco::ACS
 
-- Nothing yet
+- Add support for VERSION REST
+- Add support for custom attributes
+- Add support for other REST functions
+
 
 
