@@ -2,5 +2,10 @@ Revision history for Perl module Net::Cisco::ACS
 
 0.01 Mon Aug 22 20:12:46 2016
     - original version; created by ExtUtils::ModuleMaker 0.55
+    - Added query function (REST) for User, Device and DeviceGroup
+    - Added query function / ByName & ById
+    - Added update function
+    - Added delete function
+    - Added documentation
 
 
